Split index.js into multiple .js files.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Webpack</title>
+    <title>Tema 7 - 2D Breakout Game * Timotei Perju</title>
   </head>
   <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
